add some more controller like getUserProfile , getAllUsers and getCurrentUsers
